# community_pulse

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO.md  PORTFOLIO_IMPROVEMENT_RECOMMENDATIONS.md  README.md  UI_UX_IMPLEMENTATION_SUMMARY.md  app.py  demo_charts.py  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
artifacts/: 20251222_CHART_ENHANCEMENTS.md  20251222_DEPLOYMENT_CHECKLIST.md  20251222_EXECUTIVE_SUMMARY.md  20251222_report_pr_11_failing_tests.txt  README.md
artifacts/reports/2025-12-22/: 20251222_PROJECT_EVALUATION_REPORT.md
community_pulse/: demo_charts.py
docs/: API.md  ARCHITECTURAL_OVERVIEW.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  GITHUB_OPTIMIZATION.md  KPI_DEFINITIONS.md  SKILLS_MAPPING.md  SOP_DATA_CLEANING.md
docs/screenshots/: README.md
tests/: test_cleaner.py  test_demo_charts.py  test_emoji_removal.py  test_health_metrics.py  test_ui_helpers.py  test_visualizer.py
utils/: __init__.py  cleaner.py  data_generator.py  health_metrics.py  ui_helpers.py  visualizer.py
